--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/schul-cloud/wikipedia-content-adapter#readme",
   "dependencies": {
-    "express": "^4.15.2"
+    "express": "^4.15.3",
+    "request-promise": "^4.2.1",
+    "request":"^2.34",
+    "promise": "^7.1.1"
   }
 }
