--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.15.3",
     "request-promise": "^4.2.1",
     "request":"^2.34",
-    "promise": "^7.1.1"
+    "promise": "^7.1.1",
+    "nodemon": "^1.12.0"
   }
 }
